--- a/index.html
+++ b/index.html
@@ -192,14 +192,14 @@
     </section>
 
     <section id="deity">
-        <h3><i class="fa-solid fa-sun"></i> 主祀神明：無府三王爺</h3>
+        <h3><i class="fa-solid fa-sun"></i> 主祀神明：吳府三王爺</h3>
         <div class="deity-box">
             <div class="deity-image">
                 <img src="https://lh3.googleusercontent.com/p/AF1QipOxN31GLhxlp2txRiB7X5IJeh5ecHMsy_4JfEd9=w203-h135-k-no" alt="無府三王爺聖像">
-                <p style="margin-top: 10px; color: #666; font-style: italic;">無府三王爺 聖像</p>
+                <p style="margin-top: 10px; color: #666; font-style: italic;">吳府三王爺 聖像</p>
             </div>
             <div class="deity-text">
-                <p><strong>無府三王爺</strong>，威靈顯赫，聖德昭彰。王爺公以其強大的法力與慈悲的心腸，守護著一方百姓的平安。無論是信眾面臨事業困境、身體健康問題，或是家庭運勢的波折，只要誠心祈求，王爺公必能感應，賜予信眾智慧與力量。</p>
+                <p><strong>吳府三王爺</strong>，威靈顯赫，聖德昭彰。王爺公以其強大的法力與慈悲的心腸，守護著一方百姓的平安。無論是信眾面臨事業困境、身體健康問題，或是家庭運勢的波折，只要誠心祈求，王爺公必能感應，賜予信眾智慧與力量。</p>
                 <p style="margin-top: 1rem;">本宮三王爺特別以「斷災解厄」與「指引迷津」著稱，其聖蹟流傳於鄉里之間，深受廣大信徒的敬仰與推崇。</p>
             </div>
         </div>
@@ -251,5 +251,4 @@
 </footer>
 
 </body>
-
 </html>
