--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
         <h3><i class="fa-solid fa-sun"></i> 主祀神明：吳府三王爺</h3>
         <div class="deity-box">
             <div class="deity-image">
-                <img src="https://lh3.googleusercontent.com/p/AF1QipOxN31GLhxlp2txRiB7X5IJeh5ecHMsy_4JfEd9=w203-h135-k-no" alt="無府三王爺聖像">
+                <img src="https://lh3.googleusercontent.com/p/AF1QipOxN31GLhxlp2txRiB7X5IJeh5ecHMsy_4JfEd9=w203-h135-k-no" alt="吳府三王爺聖像">
                 <p style="margin-top: 10px; color: #666; font-style: italic;">吳府三王爺 聖像</p>
             </div>
             <div class="deity-text">
